--- a/Roman_to_Integer.ipynb
+++ b/Roman_to_Integer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Roman_to_Integer.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPjVcwOS7QTxZRpHc1g0F+p",
+      "authorship_tag": "ABX9TyN2eOnOkTzDLbtxwL6n8a4c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,16 @@
         "colab": {}
       },
       "source": [
-        ""
+        "class Solution:\n",
+        "    def romanToInt(self, s: str) -> int:\n",
+        "        \n",
+        "        my_dict = {'I': 1\n",
+        "                  'V': 5,\n",
+        "                  'X': 10,\n",
+        "                  'L': 50,\n",
+        "                  'C': 100,\n",
+        "                  'D': 500,\n",
+        "                  'M': 1000}"
       ],
       "execution_count": null,
       "outputs": []
