Found shortest prefix

--- a/LongestCommonPrefix.ipynb
+++ b/LongestCommonPrefix.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "LongestCommonPrefix.ipynb",
+      "name": "Untitled",
       "provenance": [],
-      "authorship_tag": "ABX9TyNWOp20g6OkOKqBwWAp8YlK",
+      "authorship_tag": "ABX9TyOFn9mziF6IFY/CMeAC8w+O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,9 +54,20 @@
         "        if len(strs) == 0:\n",
         "            return ''\n",
         "        if len(strs) == 1:\n",
-        "            return strs[0]"
+        "            return strs[0]\n",
+        "        \n",
+        "        prefix = strs[0]\n",
+        "        for word in strs[1:]:\n",
+        "            word1 = None\n",
+        "            word2 = None\n",
+        "            if len(prefix) > len(word):\n",
+        "                word1 = word\n",
+        "                word2 = prefix\n",
+        "            else: \n",
+        "                word1 = prefix\n",
+        "                word2 = word"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
