--- a/LongestCommonPrefix.ipynb
+++ b/LongestCommonPrefix.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled",
       "provenance": [],
-      "authorship_tag": "ABX9TyOFn9mziF6IFY/CMeAC8w+O",
+      "authorship_tag": "ABX9TyPZgNint9GFT9WuXyn6HUkM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,6 +48,7 @@
         "outputId": "b85a6cb8-5023-480b-99f8-6dbe9b1eeced"
       },
       "source": [
+        "\n",
         "class Solution:\n",
         "    def longestCommonPrefix(self, strs: List[str]) -> str:\n",
         "        \n",
@@ -65,7 +66,13 @@
         "                word2 = prefix\n",
         "            else: \n",
         "                word1 = prefix\n",
-        "                word2 = word"
+        "                word2 = word\n",
+        "            \n",
+        "            i = 0\n",
+        "            while i < len(word1) and word1[i] == word2[i]: \n",
+        "                i += 1\n",
+        "            prefix = word1[:i]\n",
+        "        return prefix"
       ],
       "execution_count": null,
       "outputs": [
