--- a/LongestCommonPrefix.ipynb
+++ b/LongestCommonPrefix.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled",
       "provenance": [],
-      "authorship_tag": "ABX9TyPZgNint9GFT9WuXyn6HUkM",
+      "authorship_tag": "ABX9TyOQ2UXuQCAbXxcb3XCbV2zA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
         "    def longestCommonPrefix(self, strs: List[str]) -> str:\n",
         "        \n",
         "        if len(strs) == 0:\n",
-        "            return ''\n",
+        "            return \"\"\n",
         "        if len(strs) == 1:\n",
         "            return strs[0]\n",
         "        \n",
@@ -67,11 +67,14 @@
         "            else: \n",
         "                word1 = prefix\n",
         "                word2 = word\n",
+        "                \n",
         "            \n",
         "            i = 0\n",
         "            while i < len(word1) and word1[i] == word2[i]: \n",
         "                i += 1\n",
         "            prefix = word1[:i]\n",
+        "            if len(prefix) == 0: \n",
+        "                return \"\"\n",
         "        return prefix"
       ],
       "execution_count": null,
