--- a/Valid_parentheses.ipynb
+++ b/Valid_parentheses.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Valid_parentheses.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPxNukFphnCYvPGajAl0yeV",
+      "authorship_tag": "ABX9TyNpN1f2H/gFcSp+Jlf/U876",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,25 @@
         "id": "1aUppyf1C0pO"
       },
       "source": [
-        ""
+        "class Solution:\n",
+        "    def isValid(self, s: str) -> bool:\n",
+        "        \n",
+        "\n",
+        "        opposite_dict = {'(' : ')', '{' : '}', '[' : ']'}\n",
+        "        \n",
+        "        len_s = (len(s)//2)\n",
+        "        \n",
+        "        ans = False\n",
+        "        for i in range(1, len_s + 1):\n",
+        "            if i%2 != 0:\n",
+        "                j = i\n",
+        "            else:\n",
+        "                j = i+1\n",
+        "            if s[-i] == opposite_dict[s[i-1]] or s[j] == opposite_dict[s[i-1]]:\n",
+        "                ans = True\n",
+        "            else:\n",
+        "                ans = False\n",
+        "        return ans"
       ],
       "execution_count": null,
       "outputs": []
