--- a/Valid_parentheses.ipynb
+++ b/Valid_parentheses.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Valid_parentheses.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNpN1f2H/gFcSp+Jlf/U876",
+      "authorship_tag": "ABX9TyNcgn4uXJ8LKvNx9+j5yKG1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,17 +52,12 @@
         "        \n",
         "        len_s = (len(s)//2)\n",
         "        \n",
-        "        ans = False\n",
-        "        for i in range(1, len_s + 1):\n",
-        "            if i%2 != 0:\n",
-        "                j = i\n",
+        "        for i in range(len_s):\n",
+        "            rev = -(i+1)\n",
+        "            if s[rev] == opposite_dict[s[i]] or :\n",
+        "                return True\n",
         "            else:\n",
-        "                j = i+1\n",
-        "            if s[-i] == opposite_dict[s[i-1]] or s[j] == opposite_dict[s[i-1]]:\n",
-        "                ans = True\n",
-        "            else:\n",
-        "                ans = False\n",
-        "        return ans"
+        "                return False"
       ],
       "execution_count": null,
       "outputs": []
