--- a/Valid_parentheses.ipynb
+++ b/Valid_parentheses.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Valid_parentheses.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNcgn4uXJ8LKvNx9+j5yKG1",
+      "authorship_tag": "ABX9TyNEoGbdkSIgQZ9dUc9LvxCo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,17 +47,21 @@
         "class Solution:\n",
         "    def isValid(self, s: str) -> bool:\n",
         "        \n",
-        "\n",
         "        opposite_dict = {'(' : ')', '{' : '}', '[' : ']'}\n",
-        "        \n",
-        "        len_s = (len(s)//2)\n",
-        "        \n",
-        "        for i in range(len_s):\n",
-        "            rev = -(i+1)\n",
-        "            if s[rev] == opposite_dict[s[i]] or :\n",
-        "                return True\n",
-        "            else:\n",
-        "                return False"
+        "\n",
+        "\n",
+        "        stck = []\n",
+        "        for c in s:\n",
+        "            if len(stck) == 0:\n",
+        "                stck.append(c)\n",
+        "                continue\n",
+        "            top = stck[-1]\n",
+        "            if c == opposite_dict.get(top, None):\n",
+        "                stck.pop()\n",
+        "                continue\n",
+        "            stck.append(c)\n",
+        "        return True if len(stck) == 0 else False\n",
+        "            "
       ],
       "execution_count": null,
       "outputs": []
