--- a/RemoveDuplicates.ipynb
+++ b/RemoveDuplicates.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "RemoveDuplicates.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNLudbrN51ECsfY5XQC1Gbq",
+      "authorship_tag": "ABX9TyMlrItSCpuW3h92JjKgq3Fc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,20 @@
         "id": "hvXUnrt-dEdQ"
       },
       "source": [
-        ""
+        "class Solution:\n",
+        "    def removeDuplicates(self, nums: List[int]) -> int:\n",
+        "        \n",
+        "        if len(nums) < 2:\n",
+        "            return len(nums)\n",
+        "        else:\n",
+        "            previous_num = nums[0]\n",
+        "            for num in nums[1:]:\n",
+        "                if num == previous_num:\n",
+        "                    nums.remove(num)\n",
+        "                    previous_num = num\n",
+        "                else:\n",
+        "                    previous_num = num\n",
+        "        return len(nums)"
       ],
       "execution_count": null,
       "outputs": []
