--- a/Search_insert_position.ipynb
+++ b/Search_insert_position.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Search_insert_position.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNvbUQbNpF86eQnzfrK/JuE",
+      "authorship_tag": "ABX9TyOFiWYxNWgbnblgHciKry97",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,15 @@
         "id": "2BIJcESA05oj"
       },
       "source": [
-        ""
+        "class Solution:\n",
+        "    def searchInsert(self, nums: List[int], target: int) -> int:\n",
+        "        \n",
+        "        \n",
+        "        if nums[-1] < target:\n",
+        "            return len(nums)\n",
+        "        for i in range(len(nums)):\n",
+        "            if nums[i] == target  or nums[i] > target:\n",
+        "                return i\n"
       ],
       "execution_count": null,
       "outputs": []
