--- a/Climbing_stairs.ipynb
+++ b/Climbing_stairs.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Climbing_stairs.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOSRf9KCdgZYMW1PpMYD58G",
+      "authorship_tag": "ABX9TyPoJmjZ1t6UQWQPmshIsMJq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,21 @@
         "id": "DEYl6TCCs18L"
       },
       "source": [
-        ""
+        "class Solution:\n",
+        "    def climbStairs(self, n: int) -> int:\n",
+        "        memo = {}\n",
+        "        return self.countStairs(n, memo)\n",
+        "        \n",
+        "    def countStairs(self, n, memo):\n",
+        "\n",
+        "        if n == 1 or n == 0:\n",
+        "            return 1\n",
+        "        \n",
+        "        if n not in memo:\n",
+        "            memo [n] = self.countStairs(n-1, memo) + self.countStairs(n-2, memo)\n",
+        "            \n",
+        "        return memo[n]\n",
+        "        "
       ],
       "execution_count": null,
       "outputs": []
